# smart-math

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  build.sh
cmake/: Utils.cmake
docs/: ABM_8h_source.html  AB_8h_source.html  CMakeCXXCompilerId_8cpp_source.html  LICENSE_8md_source.html  PECEvar_8h_source.html  README_8md_source.html  annotated.html  base__bulirschstoer_8h_source.html  base__dynamics_8h_source.html  base__event_8h_source.html  base__hamiltonian_8h_source.html  base__integrationwevent_8h_source.html  base__integrator_8h_source.html  base__multistep_8h_source.html  base__rungekutta_8h_source.html  base__stepsizecontrol_8h_source.html  base__symplectic_8h_source.html  chebyshev__inequality_8cpp_source.html  chebyshev__inequality_8h_source.html  classes.html  classsmartmath_1_1chebyshev__inequality.html  classsmartmath_1_1dynamics_1_1base__dynamics.html  classsmartmath_1_1dynamics_1_1base__dynamics__inherit__graph.map  classsmartmath_1_1dynamics_1_1base__dynamics__inherit__graph.md5  classsmartmath_1_1dynamics_1_1base__hamiltonian.html  classsmartmath_1_1dynamics_1_1base__hamiltonian__inherit__graph.map  classsmartmath_1_1dynamics_1_1base__hamiltonian__inherit__graph.md5  classsmartmath_1_1dynamics_1_1hamiltonian__mixedvar.html  classsmartmath_1_1dynamics_1_1hamiltonian__mixedvar__inherit__graph.map  classsmartmath_1_1dynamics_1_1hamiltonian__mixedvar__inherit__graph.md5  classsmartmath_1_1dynamics_1_1hamiltonian__momentum.html  classsmartmath_1_1dynamics_1_1hamiltonian__momentum__inherit__graph.map  classsmartmath_1_1dynamics_1_1hamiltonian__momentum__inherit__graph.md5  classsmartmath_1_1dynamics_1_1lotkavolterra.html  classsmartmath_1_1dynamics_1_1lotkavolterra__inherit__graph.map  classsmartmath_1_1dynamics_1_1lotkavolterra__inherit__graph.md5  classsmartmath_1_1dynamics_1_1spring.html  classsmartmath_1_1dynamics_1_1spring__inherit__graph.map  classsmartmath_1_1dynamics_1_1spring__inherit__graph.md5  classsmartmath_1_1dynamics_1_1twobody.html  (+166 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  (+7 more)
examples/: CMakeLists.txt  example_tutorial3.cpp  example_tutorial4.cpp  example_tutorial5.cpp  template_example.cpp
include/: config.h  config.h.in  exception.h  smartmath.h  smartmath.h.in
include/Dynamics/: base_dynamics.h  base_hamiltonian.h  hamiltonian_mixedvar.h  hamiltonian_momentum.h  lotkavolterra.h  oscul.h  pendulum.h  smartmath_dynamics.h  spaceflight.h  spring.h  twobody.h  vanderpol.h
include/Events/: base_event.h  smartmath_events.h
include/Integrators/: AB.h  AB6.h  ABM.h  ABM6.h  PECEvar.h  base_bulirschstoer.h  base_embeddedRK.h  base_integrationwevent.h  base_integrator.h  base_multistep.h  base_rungekutta.h  base_stepsizecontrol.h  base_symplectic.h  bulirschstoer.h  bulirschstoer_varstep.h  euler.h  euler_mixedvar.h  euler_symplectic.h  forest.h  forest_mixedvar.h  heun.h  leapfrog.h  leapfrog_mixedvar.h  midpoint.h  rk3.h  rk4.h  rk87.h  rkf45.h  smartmath_integrators.h  symplectic_mixedvar.h  yoshida6.h  yoshida6_mixedvar.h
include/LinearAlgebra/: EigenMultivariateNormal.h  smartmath_la.h
include/LinearAlgebra/Eigen/: MatrixFunctions  run.txt
include/Utils/: chebyshev_inequality.h  inline_functions.h  mixed_functions.h  rtnorm.h  smartmath_utils.h
src/: main.cpp
src/Dynamics/: base_dynamics.cpp  lotkavolterra.cpp  oscul.cpp  spring.cpp  twobody.cpp  vanderpol.cpp
src/Events/: base_event.cpp
src/Integrators/: AB.cpp  AB6.cpp  ABM.cpp  ABM6.cpp  PECEvar.cpp  base_integrator.cpp  euler.cpp  heun.cpp  rk3.cpp  rk4.cpp  rk87.cpp  rkf45.cpp
src/Utils/: chebyshev_inequality.cpp  mixed_functions.cpp  rtnorm.cpp
