add_executable(example_tutorial3 example_tutorial3.cpp)
target_link_libraries(example_tutorial3 ${LIB_NAME} ${MANDATORY_LIBRARIES})

add_executable(example_tutorial4 example_tutorial4.cpp)
target_link_libraries(example_tutorial4 ${LIB_NAME} ${MANDATORY_LIBRARIES})

add_executable(example_tutorial5 example_tutorial5.cpp)
target_link_libraries(example_tutorial5 ${LIB_NAME} ${MANDATORY_LIBRARIES})

